<resources>
    <string name="app_name">Unit Convertor</string>
    <string name="k_c_f">K.C.F.</string>
    <string name="k_m_c">K.M.C.</string>
    <string name="k_g_m">K.G.M.</string>
    <string name="kelvin_to_celsius_celsius_to_kelvin">Kelvin to Celsius/Celsius to Kelvin</string>
    <string name="celsius_to_fahrenheit_fahrenheit_to_celsius">Celsius to Fahrenheit/Fahrenheit to Celsius</string>
    <string name="kelvin_to_fahrenheit_fahrenheit_to_kelvin">Kelvin to Fahrenheit/Fahrenheit to Kelvin</string>
    <string name="meter_to_kilometer_kilometer_to_meter">Meter to Kilometer/Kilometer to meter</string>
    <string name="centimeter_to_meter_meter_to_centimeter">Centimeter to Meter/Meter to Centimeter</string>
    <string name="centimeter_to_kilometer_kilometer_to_centimeter">Centimeter to Kilometer/Kilometer to Centimeter</string>
    <string name="gram_to_kilogram_kilogram_to_gram">Gram to Kilogram/Kilogram to Gram</string>
    <string name="milligram_to_gram_gram_to_milligram">Milligram to Gram/Gram to Milligram</string>
    <string name="milligram_to_kilogram_kilogram_to_milligram">Milligram to Kilogram/Kilogram to Milligram</string>
    <string name="kelvin_to_celsius">Kelvin To Celsius</string>
    <string name="enter_kelvin_value">Enter Kelvin Value</string>
    <string name="go">Go</string>
    <string name="celsius_to_kelvin">Celsius To Kelvin</string>
    <string name="enter_celsius_value">Enter Celsius Value</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit To Celsius</string>
    <string name="enter_fahrenheit_value">Enter Fahrenheit value</string>
    <string name="fharenheit_to_kelvin">Fharenheit to Kelvin</string>
    <string name="kelvin_to_fahrenheit">Kelvin to Fahrenheit</string>
    <string name="centimeter_to_meter">Centimeter To Meter</string>
    <string name="enter_centimeter_value">Enter centimeter value</string>
    <string name="meter_to_centimeter">Meter to Centimeter</string>
    <string name="enter_meter_value">Enter Meter Value</string>
    <string name="meter_to_kilometer">Meter To Kilometer</string>
    <string name="kilometer_to_meter">Kilometer To Meter</string>
    <string name="enter_kilometer_value">Enter Kilometer Value</string>
    <string name="centimeter_to_kilometer">Centimeter To Kilometer</string>
    <string name="kilometer_to_centimeter">Kilometer To Centimeter</string>
    <string name="gram_to_kilogram">Gram To Kilogram</string>
    <string name="enter_gram_value">Enter Gram Value</string>
    <string name="kilogram_to_gram">Kilogram to Gram</string>
    <string name="enter_kilogram_value">Enter Kilogram Value</string>
    <string name="milligram_to_gram">Milligram to Gram</string>
    <string name="enter_milligram_value">Enter Milligram Value</string>
    <string name="gram_to_milligram">Gram to Milligram</string>
    <string name="milligram_to_kilogram">Milligram To Kilogram</string>
    <string name="kilogram_to_milligram">Kilogram to Milligram</string>
    <string name="celsius">°C</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="weight_units">Weight Units</string>
    <string name="distance_units">Distance Units</string>
</resources>