<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient4"
    tools:context=".MilligramToKilogramOrVv">

    <TextView
        android:id="@+id/header9.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        style="@style/title"
        android:text="@string/milligram_to_kilogram"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:id="@+id/wrapper9.1"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/header9.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input9_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/enter_milligram_value"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_view9_1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper9.1"
        style="@style/result_box"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/firstBtn9_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textColor="@color/black"
        android:background="@color/cyan"
        style="@style/result_button"
        app:layout_constraintTop_toBottomOf="@+id/result_view9_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/header9.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/title"
        android:text="@string/kilogram_to_milligram"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/firstBtn9_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input"
        android:id="@+id/wrapper9.2"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/header9.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input9_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/enter_kilogram_value"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_view9_2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper9.2"
        style="@style/result_box"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/secondBtn9_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textColor="@color/black"
        android:background="@color/cyan"
        style="@style/result_button"
        app:layout_constraintTop_toBottomOf="@+id/result_view9_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>